[project]
name = "poi-to-polygon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.17.0",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "mapclassify>=2.8.1",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "shapely>=2.0.6",
    "typer>=0.12.5",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
unfixable = []
